# simple-ml

./: README.md  pyproject.toml
notebooks/diffusion-models/: data.py  simple-probability-example.ipynb
notebooks/language-models/: test_llama_components.ipynb
notebooks/language-models/positional-encodings/: absolute_positional_encodings.ipynb
notebooks/tokenization/: bpe.ipynb
src/simple_ml/: __main__.py  global_utils.py
src/simple_ml/llms/llama3/: model.py
src/simple_ml/tokenizers/: bpe.py
src/simple_ml/utils/: activations.py  normalizations.py  position_embeddings.py
