[tool.poetry]
name = "simple-ml"
version = "0.1.0"
description = ""
authors = ["Mukund Sudarshan <msudarshan95@gmail.com>"]
readme = "README.md"
packages = [{include = "simple_ml", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
numpy = "^2.1.3"
scipy = "^1.14.1"
matplotlib = "^3.9.3"
torch = "^2.5.1"
torchvision = "^0.20.1"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
